tests/golden/type_errors/inferred_let_function_assignment_mismatch.cd
let f = fun () {
  return 1;
};
f = 1;
